// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Builds question build simple active maadhi table question - allows active/passive as wrong choices 1`] = `
Object {
  "choices": Array [
    Object {
      "isWrong": true,
      "text": "فُعِلاَ",
      "val": "فُعِلاَ",
    },
    Object {
      "isWrong": true,
      "text": "فُعِلُوا",
      "val": "فُعِلُوا",
    },
    Object {
      "isWrong": true,
      "text": "فُعِلَتْ",
      "val": "فُعِلَتْ",
    },
    Object {
      "isCorrect": true,
      "text": "فَعَلَ",
      "val": "فَعَلَ",
    },
  ],
  "text": "maadhi he",
}
`;

exports[`Builds question build simple active maadhi table question 1`] = `
Object {
  "choices": Array [
    Object {
      "isWrong": true,
      "text": "فَعَلاَ",
      "val": "فَعَلاَ",
    },
    Object {
      "isWrong": true,
      "text": "فَعَلُوا",
      "val": "فَعَلُوا",
    },
    Object {
      "isWrong": true,
      "text": "فَعَلَتْ",
      "val": "فَعَلَتْ",
    },
    Object {
      "isCorrect": true,
      "text": "فَعَلَ",
      "val": "فَعَلَ",
    },
  ],
  "text": "maadhi he",
}
`;

exports[`Builds question build simple active mudari table question 1`] = `
Object {
  "choices": Array [
    Object {
      "isWrong": true,
      "text": "يَفْعُلَانِ",
      "val": "يَفْعُلَانِ",
    },
    Object {
      "isWrong": true,
      "text": "يَفْعُلُونَ",
      "val": "يَفْعُلُونَ",
    },
    Object {
      "isWrong": true,
      "text": "تَفْعُلُ",
      "val": "تَفْعُلُ",
    },
    Object {
      "isCorrect": true,
      "text": "يَفْعُلُ",
      "val": "يَفْعُلُ",
    },
  ],
  "text": "mudari he",
}
`;

exports[`Builds question build simple passive maadhi table question 1`] = `
Object {
  "choices": Array [
    Object {
      "isWrong": true,
      "text": "فُعِلاَ",
      "val": "فُعِلاَ",
    },
    Object {
      "isWrong": true,
      "text": "فُعِلُوا",
      "val": "فُعِلُوا",
    },
    Object {
      "isWrong": true,
      "text": "فُعِلَتْ",
      "val": "فُعِلَتْ",
    },
    Object {
      "isCorrect": true,
      "text": "فُعِلَ",
      "val": "فُعِلَ",
    },
  ],
  "text": "maadhi he",
}
`;

exports[`Builds question build simple passive mudari table question 1`] = `
Object {
  "choices": Array [
    Object {
      "isWrong": true,
      "text": "يُفْعَلَانِ",
      "val": "يُفْعَلَانِ",
    },
    Object {
      "isWrong": true,
      "text": "يُفْعَلُونَ",
      "val": "يُفْعَلُونَ",
    },
    Object {
      "isWrong": true,
      "text": "تُفْعَلُ",
      "val": "تُفْعَلُ",
    },
    Object {
      "isCorrect": true,
      "text": "يُفْعَلُ",
      "val": "يُفْعَلُ",
    },
  ],
  "text": "mudari he",
}
`;

exports[`Make maadhi question 1`] = `
Object {
  "choices": Array [
    Object {
      "isWrong": true,
      "text": Array [
        "كَسَّنَ",
      ],
      "val": Array [
        "كَسَّنَ",
      ],
    },
    Object {
      "isWrong": true,
      "text": Array [
        "كَسَّنَ",
      ],
      "val": Array [
        "كَسَّنَ",
      ],
    },
    Object {
      "isWrong": true,
      "text": Array [
        "كَسَّنَ",
      ],
      "val": Array [
        "كَسَّنَ",
      ],
    },
    Object {
      "isCorrect": true,
      "text": Array [
        Array [
          "ك",
          "َ",
        ],
        Array [
          "س",
          "َ",
        ],
        Array [
          "ن",
          "َ",
        ],
      ],
      "val": Array [
        Array [
          "ك",
          "َ",
        ],
        Array [
          "س",
          "َ",
        ],
        Array [
          "ن",
          "َ",
        ],
      ],
    },
  ],
  "text": "Which is the 3rd person masculine maadhi?",
}
`;
